--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
   width: 60em;
   margin: 0 auto;
   border-right: 2px solid rgba(255,255,255,.75);
-  font-size: 150%;
+  font-size: 1.5vw;
   text-align: left;
   transform: translateY(-50%);    
   
